<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/all_border_layout"
    tools:context="app.flores.com.moneyhelper.FormActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_textView_tittle"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/all_textSize_titlle"
        android:textSize="@dimen/all_textSize_titlle"/>

    <EditText
        android:id="@+id/inputMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/form_monto"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_textSize_titlle"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/ingreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ingreso"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/egreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Egreso"
            android:layout_weight="1"/>
    </RadioGroup>

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tipo_de_cuenta"
        android:textColorHint="#05ab9a"
        app:met_floatingLabel="normal"
        android:layout_margin="@dimen/all_textSize_titlle"/>

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_border_layout"
        android:text="@string/registrar"
        />

</LinearLayout>
