<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.flores.com.moneyhelper.MainActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="agregarTransaccion"
        app:srcCompat="@android:drawable/ic_input_add" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/all_border_layout"
        android:orientation="vertical"
        tools:context="app.flores.com.moneyhelper.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/main_textview_titulo"
            android:textAlignment="center"
            android:textSize="@dimen/all_textSize_titlle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_textSize_titlle"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/main_textView_ahorro"
                android:textSize="@dimen/size_common_text" />

            <TextView
                android:id="@+id/saldoActualAhorro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textSize="@dimen/size_common_text"
                android:textStyle="bold"
                tools:text="$/.1200" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_textSize_titlle"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/main_textView_credito"
                android:textSize="@dimen/size_common_text" />

            <TextView
                android:id="@+id/saldoActualCredito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textSize="@dimen/size_common_text"
                android:textStyle="bold"
                tools:text="$/.1200" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_textSize_titlle"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/main_textView_efectivo"
                android:textSize="@dimen/size_common_text" />

            <TextView
                android:id="@+id/saldoActualEfectivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textSize="@dimen/size_common_text"
                android:textStyle="bold"
                tools:text="$/.1200" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_tittle_top"
            android:text="@string/proporcion_ingresos_egresos"
            android:textSize="@dimen/all_textSize_titlle" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_textSize_titlle" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.github.mikephil.charting.charts.PieChart>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
